<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HappyEvent</string>
    <string name="list_of_events_page">Список событий</string>
    <string name="action_settings">Настройки</string>
	<string name="add_event">Добавить событие</string>
	<string name="add_event_page">Добавление события</string>
	<string name="button_add_title">Добавить</string>
	<string name="label_commentary">Комментарий:</string>
	<string name="whom_birthday">Чье?</string>
	<string name="date_of_birthday">Дата Рождения:</string>
	<string name="whom_demobee">Чей?</string>
	<string name="date_of_demobee">Дата Дембеля:</string>
	<string name="title_of_event">Название:</string>
	<string name="date_of_event">Дата:</string>
	<string name="not_enter_whom_birthday">Не заполнено поле "Чье"</string>
	<string name="not_enter_date_of_birth">Не заполнено поле "Дата Рождения"</string>
	<string name="not_enter_whom_demobee">Не заполнено поле "Чей"</string>
	<string name="not_enter_date_of_demobee">Не заполнено поле "Дата Дембеля"</string>
	<string name="not_enter_title_of_event">Не заполнено поле "Название"</string>
	<string name="not_enter_date_of_event">Не заполнено поле "Дата"</string>
	<string name="not_enter_type_of_holiday">Не выбран праздник</string>
    <string name="date_not_matching_mask">Дата не соответствует маске ЧЧ-ММ-ГГГГ</string>
    <string name="date_not_valid_means">Введены несуществующие значения года, месяца, дня</string>
    <string name="date_later_then_current">Дата Рождения не может быть позже текущей даты</string>
    <string name="field_whom_too_long">Поле "Чье" не может быть более 100 символов</string>
    <string name="field_commentary_too_long">Поле "Комментарий" не может быть более 500 символов</string>
    <string name="field_whom2_too_long">Поле "Чей" не может быть более 100 символов</string>
    <string name="date_earlier_then_current">Дата Дембеля не может быть раньше текущей даты</string>
    <string name="field_title_too_long">Поле "Название" не может быть более 40 символов</string>
    <string name="date_earlier_then_current2">Дата не может быть раньше текущей даты</string>
    <string name="list_of_events">Список событий</string>
    <string name="type_event_birthday">День Рождения</string>
    <string name="type_event_demobee">Дембель</string>
    <string name="type_event_customevent">Другое событие</string>
    <string name="type_event_holiday">Праздник</string>
    <string name="which_type_of_holiday">Какой?</string>
    <string name="lost_time">До наступления:</string>
</resources>
