<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="fill_horizontal">

        <TextView android:id="@+id/titleDemobeeEvent"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="40dip"
                  android:textSize="20sp"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/type_event_demobee"
                  android:textColor="@android:color/holo_orange_dark"
                />

        <TextView
                android:id="@+id/textViewWhomDemobeeOutputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/whom_demobee"
                android:textColor="@android:color/holo_blue_dark"
                />

        <TextView
                android:id="@+id/textViewWhomDemobeeOutputField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text=""
                />

        <TextView
                android:id="@+id/textViewDateOfDemobeeOutputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/date_of_demobee"
                android:textColor="@android:color/holo_blue_dark"
                />

        <TextView
                android:id="@+id/textViewDateOfDemobeeOutputField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text=""/>

        <TextView
                android:id="@+id/textViewShowCommentaryOfDemobeeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_commentary"
                android:textColor="@android:color/holo_blue_dark"
                />

        <TextView
                android:id="@+id/textViewShowCommentaryOfDemobeeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text=""/>

    </LinearLayout>
</ScrollView>